--- a/app/src/main/res/layout/activity_new_purchase.xml
+++ b/app/src/main/res/layout/activity_new_purchase.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/contacto"
-        android:layout_below="@id/textView7"
+        android:layout_below="@id/titulo"
         android:layout_centerVertical="false"
         android:layout_marginTop="10dp">
 
@@ -205,11 +205,11 @@
 
                 <net.orandja.shadowlayout.ShadowLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/semiround_white_solid"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     app:shadow_cast_only_background="true"
                     app:shadow_color="#808"
                     app:shadow_downscale="1"
@@ -225,13 +225,14 @@
                     <RelativeLayout
                         android:id="@+id/fechaLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp">
 
                         <androidx.appcompat.widget.AppCompatEditText
 
                             android:id="@+id/fecha"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
                             android:fontFamily="@font/poppins_regular"
@@ -245,11 +246,11 @@
 
                 <net.orandja.shadowlayout.ShadowLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/semiround_white_solid"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     app:shadow_cast_only_background="true"
                     app:shadow_color="#808"
                     app:shadow_downscale="1"
@@ -265,12 +266,13 @@
                     <RelativeLayout
                         android:id="@+id/emailLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="50dp">
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp">
 
                         <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                             android:id="@+id/spinner"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="match_parent"
                             android:layout_marginStart="0dp"
                             android:padding="0dp"
                             android:textAlignment="center" />
@@ -279,14 +281,13 @@
                 </net.orandja.shadowlayout.ShadowLayout>
 
 
-
                 <net.orandja.shadowlayout.ShadowLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/semiround_white_solid"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     app:shadow_cast_only_background="true"
                     app:shadow_color="#808"
                     app:shadow_downscale="1"
@@ -302,13 +303,14 @@
                     <RelativeLayout
                         android:id="@+id/passLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp">
 
                         <androidx.appcompat.widget.AppCompatEditText
 
                             android:id="@+id/nombre"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
                             android:fontFamily="@font/poppins_regular"
@@ -323,11 +325,11 @@
 
                 <net.orandja.shadowlayout.ShadowLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/semiround_white_solid"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     app:shadow_cast_only_background="true"
                     app:shadow_color="#808"
                     app:shadow_downscale="1"
@@ -343,13 +345,14 @@
                     <RelativeLayout
                         android:id="@+id/passLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp">
 
                         <androidx.appcompat.widget.AppCompatEditText
 
                             android:id="@+id/lugar"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
                             android:fontFamily="@font/poppins_regular"
@@ -431,5 +434,12 @@
             android:textSize="14sp" />
     </LinearLayout>
 
-
+    <ImageView
+        android:id="@+id/logout"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/logout" />
 </RelativeLayout>
