--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="back_color">#F9FAFE</color>
     <color name="main_color">#B9935A</color>
+    <color name="secondary_color">#F8C300</color>
 
 
 </resources>
