--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -49,6 +49,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <LinearLayout
@@ -64,7 +65,7 @@
                                 android:text="Fecha:"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/fecha"
@@ -75,7 +76,7 @@
                                 android:text="   "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -92,7 +93,7 @@
                                 android:text="Dia:"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/dia"
@@ -103,13 +104,14 @@
                                 android:text="   "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
                         </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -120,7 +122,7 @@
                             android:text="Tipo:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/tipoNegocio"
@@ -137,6 +139,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -147,7 +150,7 @@
                             android:text="Negocio:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/nombre"
@@ -158,12 +161,13 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -174,7 +178,7 @@
                             android:text="Lugar:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/lugar"
@@ -185,7 +189,7 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -585,7 +589,8 @@
                     android:text="o escanee el codigo de barras"
                     android:textAlignment="viewStart"
                     android:textColor="@color/darkGray"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:visibility="gone" />
 
 
                 <ImageView
@@ -595,7 +600,8 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
-                    android:src="@drawable/logo_skill" />
+                    android:src="@drawable/logo_skill"
+                    android:visibility="gone" />
 
 
             </LinearLayout>
@@ -634,7 +640,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:background="@drawable/semiround_gold_solid"
+            android:background="@drawable/semiround_gray_solid"
             android:fontFamily="@font/poppins_bold"
             android:text="Nuevo Prod"
             android:textColor="@android:color/white"
@@ -642,15 +648,25 @@
 
     </LinearLayout>
 
-    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/spin_kit"
-        style="@style/SpinKitView.Wave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.4"
+        android:background="@color/black"
+        android:visibility="gone">
+
+    </RelativeLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:visibility="invisible"
-        app:SpinKit_Color="@android:color/darker_gray" />
+        android:visibility="gone"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading" />
 
     <ImageView
         android:id="@+id/logout"
