--- a/app/src/main/res/layout/activity_new_purchase.xml
+++ b/app/src/main/res/layout/activity_new_purchase.xml
@@ -49,6 +49,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -59,10 +60,10 @@
                             android:text="IdHogar:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/idHogar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
@@ -70,12 +71,13 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -86,10 +88,10 @@
                             android:text="Grupo:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/grupo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
@@ -97,12 +99,13 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -113,10 +116,10 @@
                             android:text="Estado:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/estado"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
@@ -124,12 +127,13 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -140,10 +144,10 @@
                             android:text="Municipio:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/municipio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
@@ -151,12 +155,13 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -167,10 +172,10 @@
                             android:text="Parroquia:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/ciudad"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
@@ -178,7 +183,7 @@
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -369,7 +374,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/semiround_gold_solid"
+                    android:background="@drawable/semiround_yellow_solid"
                     android:fontFamily="@font/poppins_bold"
                     android:text="INTRODUCIR PRODUCTOS"
                     android:textColor="@android:color/white"
@@ -378,8 +383,8 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="200dp"
-                    android:layout_height="100dp"
+                    android:layout_width="140dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:src="@drawable/logo_skill" />
@@ -390,15 +395,25 @@
 
     </ScrollView>
 
-    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/spin_kit"
-        style="@style/SpinKitView.Wave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+      <RelativeLayout
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.4"
+        android:background="@color/black"
+        android:visibility="gone">
+
+    </RelativeLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:visibility="gone"
         android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:visibility="invisible"
-        app:SpinKit_Color="@android:color/darker_gray" />
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading" />
 
     <LinearLayout
         android:id="@+id/contacto"
