--- a/app/src/main/res/layout/cell_producto.xml
+++ b/app/src/main/res/layout/cell_producto.xml
@@ -11,6 +11,22 @@
     android:clipToPadding="true">
 
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/editar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:forceHasOverlappingRendering="false">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/pencil" />
+    </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +47,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="Categoria:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/categoria"
@@ -41,20 +57,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="   "
                 android:textColor="@color/darkGray"
-                android:textSize="16sp" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/editar"
-                android:layout_width="40dp"
-                android:layout_height="40dp">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    app:srcCompat="@drawable/pencil" />
-            </androidx.cardview.widget.CardView>
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -72,7 +75,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="Presentacion:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/presentacion"
@@ -82,7 +85,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="   "
                 android:textColor="@color/darkGray"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -99,7 +102,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="Marca"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/marca"
@@ -109,7 +112,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="   "
                 android:textColor="@color/darkGray"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -126,7 +129,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="Peso:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/peso"
@@ -136,7 +139,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="   "
                 android:textColor="@color/darkGray"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -153,7 +156,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="Gasto:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/gasto"
@@ -163,7 +166,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="   "
                 android:textColor="@color/darkGray"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -180,7 +183,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="Cantidad:"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/cantidad"
@@ -190,7 +193,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="   "
                 android:textColor="@color/darkGray"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
 
