--- a/app/src/main/res/layout/activity_new_purchase.xml
+++ b/app/src/main/res/layout/activity_new_purchase.xml
@@ -23,7 +23,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/contacto"
+        android:layout_above="@id/contactoLayout"
         android:layout_below="@id/titulo"
         android:layout_centerVertical="false"
         android:layout_marginTop="10dp">
@@ -416,7 +416,7 @@
         app:lottie_rawRes="@raw/loading" />
 
     <LinearLayout
-        android:id="@+id/contacto"
+        android:id="@+id/contactoLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -437,7 +437,7 @@
             android:textSize="14sp" />
 
         <Button
-            android:id="@+id/signup"
+            android:id="@+id/contacto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
