--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,25 +9,13 @@
     tools:context=".authentication.SignInActivity">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="Hola!"
-        android:textAlignment="viewStart"
-        android:textColor="@color/darkGray"
-        android:textSize="16sp" />
-
-    <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView2"
+        android:layout_above="@id/textView"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="Login"
+        android:text="Iniciar Sessión"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="30sp" />
@@ -36,7 +24,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView4"
+        android:layout_above="@id/scroll"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/poppins_regular"
         android:text="Ingrese su usuario y contraseña"
@@ -45,15 +33,15 @@
         android:textSize="16sp" />
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/textView"
-        android:layout_centerVertical="false"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
@@ -154,7 +142,8 @@
                     android:textAlignment="textEnd"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/login"
@@ -163,7 +152,7 @@
                     android:layout_marginTop="20dp"
                     android:background="@drawable/semiround_yellow_solid"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="Ingresar"
+                    android:text="INGRESAR"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />
 
