--- a/app/src/main/res/layout/activity_finish_purchase.xml
+++ b/app/src/main/res/layout/activity_finish_purchase.xml
@@ -56,6 +56,8 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
+
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -74,7 +76,7 @@
                                 android:fontFamily="@font/poppins_regular"
                                 android:text="Fecha:"
                                 android:textAlignment="viewStart"
-                                android:textColor="@color/black"
+                                android:textColor="@color/darkGray"
                                 android:textSize="14sp" />
 
                             <TextView
@@ -86,7 +88,7 @@
                                 android:text="   "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -99,10 +101,11 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
+                                android:layout_weight="1"
                                 android:fontFamily="@font/poppins_regular"
-                                android:text="Dia:"
+                                android:text="Dia"
                                 android:textAlignment="viewStart"
-                                android:textColor="@color/black"
+                                android:textColor="@color/darkGray"
                                 android:textSize="14sp" />
 
                             <TextView
@@ -111,11 +114,39 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
                                 android:fontFamily="@font/poppins_regular"
-                                android:text="   "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
                                 android:textSize="14sp" />
                         </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/semanaLbl"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="20dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/poppins_regular"
+                                android:text="Semana"
+                                android:textAlignment="viewStart"
+                                android:textColor="@color/darkGray"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/semana"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="20dp"
+                                android:fontFamily="@font/poppins_regular"
+                                android:textAlignment="viewStart"
+                                android:textColor="@color/darkGray"
+                                android:textSize="14sp" />
+                        </LinearLayout>
+
                     </LinearLayout>
 
                     <LinearLayout
@@ -201,6 +232,20 @@
                             android:textColor="@color/darkGray"
                             android:textSize="14sp" />
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/editarCompra"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/semiround_gold_solid"
+                        android:fontFamily="@font/poppins_bold"
+                        android:padding="0dp"
+                        android:text="Editar Compra"
+                        android:textColor="@android:color/white"
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
