--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_above="@id/textView"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="Iniciar Sessión"
+        android:text="Iniciar Sesión"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textSize="30sp" />
@@ -84,7 +84,7 @@
                             android:ems="10"
                             android:fontFamily="@font/poppins_regular"
                             android:hint="Usuario"
-                            android:inputType="textPersonName"
+                            android:inputType="none|number"
 
                             android:textSize="14sp" />
                     </RelativeLayout>
