--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -47,7 +47,6 @@
                     android:orientation="vertical">
 
 
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -81,6 +80,14 @@
                                 android:textSize="14sp" />
                         </LinearLayout>
 
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -90,7 +97,6 @@
                                 android:id="@+id/diaLbl"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="20dp"
                                 android:layout_weight="1"
                                 android:fontFamily="@font/poppins_regular"
                                 android:text="Dia"
@@ -296,6 +302,7 @@
                 </net.orandja.shadowlayout.ShadowLayout>
 
                 <net.orandja.shadowlayout.ShadowLayout
+                    android:id="@+id/presentacionLayout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -376,7 +383,7 @@
                                 android:fontFamily="@font/poppins_regular"
                                 android:hint="Peso/Vol."
 
-                                android:inputType="textPersonName"
+                                android:inputType="none|number"
                                 android:textSize="14sp" />
                         </RelativeLayout>
 
@@ -421,50 +428,101 @@
 
                 </LinearLayout>
 
-                <net.orandja.shadowlayout.ShadowLayout
-                    android:id="@+id/gastoView"
+
+                <LinearLayout
+                    android:id="@+id/gastoLayoutRow"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/semiround_white_solid"
-                    android:padding="4dp"
-                    app:shadow_cast_only_background="true"
-                    app:shadow_color="#808"
-                    app:shadow_downscale="1"
-                    app:shadow_radius="8"
-                    app:shadow_with_color="true"
-                    app:shadow_with_content="true"
-                    app:shadow_with_css_scale="true"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:visibility="invisible">
 
-                    app:shadow_with_dpi_scale="true"
-                    app:shadow_x_shift="0dp"
-                    app:shadow_y_shift="4dp">
-
-                    <RelativeLayout
-                        android:id="@+id/passLayout"
+                    <net.orandja.shadowlayout.ShadowLayout
+                        android:id="@+id/gastoView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="5dp">
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/semiround_white_solid"
+                        android:padding="4dp"
+                        app:shadow_cast_only_background="true"
+                        app:shadow_color="#808"
+                        app:shadow_downscale="1"
+                        app:shadow_radius="8"
+                        app:shadow_with_color="true"
+                        app:shadow_with_content="true"
 
-                        <androidx.appcompat.widget.AppCompatEditText
+                        app:shadow_with_css_scale="true"
+                        app:shadow_with_dpi_scale="true"
+                        app:shadow_x_shift="0dp"
+                        app:shadow_y_shift="4dp">
 
-                            android:id="@+id/gasto"
+                        <RelativeLayout
+                            android:id="@+id/passLayout"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_marginStart="5dp"
-                            android:background="@null"
-                            android:ems="10"
-                            android:fontFamily="@font/poppins_regular"
-                            android:hint="Costo"
+                            android:layout_marginStart="5dp">
 
-                            android:inputType="numberDecimal"
-                            android:textSize="14sp" />
-                    </RelativeLayout>
+                            <androidx.appcompat.widget.AppCompatEditText
 
-                </net.orandja.shadowlayout.ShadowLayout>
+                                android:id="@+id/gasto"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="5dp"
+                                android:background="@null"
+                                android:ems="10"
+                                android:fontFamily="@font/poppins_regular"
+                                android:hint="Costo"
+
+                                android:inputType="numberDecimal"
+                                android:textSize="14sp" />
+                        </RelativeLayout>
+
+                    </net.orandja.shadowlayout.ShadowLayout>
+
+                    <net.orandja.shadowlayout.ShadowLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/semiround_white_solid"
+                        android:padding="4dp"
+                        app:shadow_cast_only_background="true"
+                        app:shadow_color="#808"
+                        app:shadow_downscale="1"
+                        app:shadow_radius="8"
+                        app:shadow_with_color="true"
+                        app:shadow_with_content="true"
+
+                        app:shadow_with_css_scale="true"
+                        app:shadow_with_dpi_scale="true"
+                        app:shadow_x_shift="0dp"
+                        app:shadow_y_shift="4dp">
+
+                        <RelativeLayout
+                            android:id="@+id/emailLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="5dp">
+
+                            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+                                android:id="@+id/moneda"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginStart="5dp"
+                                android:padding="0dp"
+                                android:textAlignment="center" />
+                        </RelativeLayout>
+
+                    </net.orandja.shadowlayout.ShadowLayout>
+
+                </LinearLayout>
+
+
 
                 <net.orandja.shadowlayout.ShadowLayout
+                    android:id="@+id/marcaLayout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -477,8 +535,8 @@
                     app:shadow_radius="8"
                     app:shadow_with_color="true"
                     app:shadow_with_content="true"
-                    app:shadow_with_css_scale="true"
 
+                    app:shadow_with_css_scale="true"
                     app:shadow_with_dpi_scale="true"
                     app:shadow_x_shift="0dp"
                     app:shadow_y_shift="4dp">
@@ -590,12 +648,12 @@
 
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/legend"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/poppins_regular"
-                    android:text="o escanee el codigo de barras"
+                    android:text="si el producto posse codigo de barras por favor escanee aquí"
                     android:textAlignment="viewStart"
                     android:textColor="@color/darkGray"
                     android:textSize="16sp"
@@ -614,6 +672,7 @@
                     android:textSize="12sp" />
 
                 <net.orandja.shadowlayout.ShadowLayout
+                    android:id="@+id/scannerLayout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
@@ -627,8 +686,8 @@
                     app:shadow_radius="8"
                     app:shadow_with_color="true"
                     app:shadow_with_content="true"
-                    app:shadow_with_css_scale="true"
 
+                    app:shadow_with_css_scale="true"
                     app:shadow_with_dpi_scale="true"
                     app:shadow_x_shift="0dp"
                     app:shadow_y_shift="4dp">
